@@ -5,12 +5,14 @@ import bks2101.kuraga.firstProject.models.ApplicationUser;
 import lombok.AllArgsConstructor;
 import lombok.Data;
 import org.springframework.security.core.GrantedAuthority;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.User;
 import org.springframework.security.core.userdetails.UserDetails;
 
 import java.util.Collection;
 import java.util.List;
 import java.util.Set;
+import java.util.stream.Collectors;
 
 @Data
 @AllArgsConstructor
@@ -54,10 +56,10 @@ public class UserDetailsImpl implements UserDetails {
         return isActive;
     }
     public static UserDetails fromUser(ApplicationUser user) {
-        var authorities = user.getRoles().stream()
-                .map(role -> role.getName().grantedAuthority())
-                .flatMap(Set::stream)
-                .toList();
+        var authorities = user.getRole().getPermissions()
+                .stream()
+                .map(permission -> new SimpleGrantedAuthority(permission.getPermission()))
+                .collect(Collectors.toList());
         return new User(
                 user.getEmail(),
                 user.getPassword(),
